# prs_med_mmrs

./: .gitignore  CLOUD_PLATFORMS.md  DATASET_PREPARATION.md  MEMORY_OPTIMIZATION.md  MULTI_GPU_TRAINING.md  README.md  README_DRAFT.md  REPRODUCIBILITY.md  SAM_MED2D_PYPROJECT_TEMPLATE.toml  evaluate.sh  infer.py  infer_original.py  inference.py  main.py  pyproject.toml  requirements.txt  run_multi_gpu_train.sh  setup.sh  setup_cloud.sh  splitter.py  train.py  train.sh  train_80gb_gpu.sh  train_draft.sh  train_original.py  train_our_dataset.sh  train_prs_med.py
configs/: __init__.py  hyperparameters.py  modality_config.py  prs_med.yaml  training_config.py
data/: brain_tumors_ct_scan.csv  breast_tumors_ct_scan.csv  convert_head_neck_npz.py  dataset.py  dataset_original.py  generate_annotations.py  polyp_endoscopy.csv  prepare_datasets.py  reorganize_prostate.py  reorganize_to_split_structure.py  skin_rgbimage.csv
data_pipeline/: dataset_mmrs.py  transforms.py
data_utils/: __init__.py  dataset.py  utils.py
evaluation/: benchmark_prs_med.py  eval.py  eval_prs_med_full.py  eval_seg_original.py  metrics.py
llava/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
llava/model/: builder.py  (+2 more)
models/: __init__.py  fusion_module.py  image_encoder.py  llm_seg.py  llm_seg_original.py  mask_decoder.py  prs_med_model.py  text_encoder.py  tiny_sam_encoder.py
scripts/: build_mmrs.py  download_datasets.py  modality_manager.py  prepare_busi.py  prepare_data.py  train.py
src/: eval.py  infer.py  test_dataloader.py  train.py
tests/: test_data.py  test_dataset.py  test_decoder_modules.py  test_llava_med_mllm.py  test_models.py  test_objective_function.py  test_tiny_sam_encoder.py  test_training.py
tools/: make_prsmed_jsonl.py
training/: __init__.py  evaluation.py  losses.py  optimizer.py  train_loop.py  trainer.py
utils/: __init__.py  checkpoint.py  config.py  device.py  logging.py  seed.py  text.py
(+35 files in other folders)
