[project]
name = "prs-med-mmrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "psutil>=7.1.3",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
