[project]
name = "prs-med-mmrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.7",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "psutil>=7.1.3",
    "sam-2",
    "scipy>=1.11.0",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torchrun>=0.2.9",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
